<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/historial_background"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/tv_detalle_tema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detalle_incidencia_titulo"
        android:textColor="#FFC107"
        android:textSize="20sp"
        android:textStyle="bold"
        android:letterSpacing="0.05"/>

    <TextView
        android:id="@+id/tv_detalle_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/detalle_incidencia_remitente"
        android:textColor="#9E9E9E"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#334155" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detalle_incidencia_titulo_desc"
        android:textColor="#FFC107"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_detalle_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/detalle_incidencia_contenido_desc"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_detalle_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#1AFFFFFF"
        android:padding="12dp"
        android:text="@string/detalle_incidencia_info_adicional"
        android:textColor="#4ADE80"
        android:textSize="13sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btn_finalizar_incidencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#EF5350"
        android:text="@string/detalle_incidencia_btn_resolver"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:cornerRadius="8dp" />

</LinearLayout>