<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo_sin_logo"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/historial_titulo"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabFiltroHistorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        app:tabIndicatorColor="#00E5FF"
        app:tabIndicatorHeight="3dp"
        app:tabSelectedTextColor="#00E5FF"
        app:tabTextColor="#FFFFFF"
        app:tabMode="fixed">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/historial_admins" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/historial_usuarios" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHistorial"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp" />

</LinearLayout>